# MLFlow-in-Claim-Injury-Prediction

./: .gitignore  MLFLOW_IMPROVEMENTS.md  PIPELINE_README.md  README.md  full run output.txt  mlruns.db  notes.txt  pyproject.toml  requirements.txt  temp.txt  test.py  test_pipeline_structure.py  utils.py  utils_dicts.py  utils_feature_selection.py
Encoders/: LabelEncoder.pkl  dic_4_encoding.json
conf/: logging.yml
conf/base/: catalog.yml  mlflow.yml  parameters.yml  params.yml
data/: README.md
docs/source/: conf.py  index.rst
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  Expectation Suite.json  financial_features_expectations.json  geographic_administrative_expectations.json  injury_industry_classification_expectations.json  medical_case_processing_expectations.json  personal_information_expectations.json  processed_data_suite.json  raw_data_suite.json
gx/expectations/preprocessed_data/: warning.json
mlops/: README.md
notebooks/: 01_EDA.ipynb  02_Preprocessing.ipynb  03_FeatureSelection.ipynb  06_Predictive Model.ipynb
notebooks/Encoders/: OneHotEncoder.pkl
src/mlflow_in_claim_injury_prediction/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/mlflow_in_claim_injury_prediction/pipelines/: __init__.py
src/mlflow_in_claim_injury_prediction/pipelines/data units test/: nodes.py  (+1 more)
src/mlflow_in_claim_injury_prediction/utils/: feature_store_utils.py  mlflow_utils.py
src/mlops/: __init__.py  __main__.py
tests/pipelines/data_science/: test_pipeline.py
utils/: model.py  utils.py  utils_feature_selection.py
(+41 files in other folders)
